# Herreira

./: CLAUDE.md  README.md  _book_chunk1.js  a-joia-que-sou-final.html  a-joia-que-sou.txt  book-ch11.html  book-part2.html  book-part3.html  book-part4.html  herreira.html  herreira_cultura_empresarial.pptx  llms.txt  pyproject.toml
.github/workflows/: daily-collect.yml  weekly-benchmark.yml
docs/stats/: latest.json
scripts/: update-docs.py
src/: cli.py
